# halo2msm

./: Cargo.toml  README.md
src/: assignments.rs  config.rs  lib.rs  msm_var.rs  rw.rs  tests.rs  util.rs
src/msm_fix/: assignments.rs  config.rs  mod.rs  tests.rs
src/msm_var/: mod.rs
src/msm_var/bucket/: assignments.rs  config.rs  instructions.rs  mod.rs  msm_var.rs  rw.rs  tests.rs
src/msm_var/bucket/narrow/: assignments.rs  config.rs  mod.rs  msm.rs  rw.rs  tests.rs
src/msm_var/bucket/wide/: assignments.rs  config.rs  mod.rs  msm.rs  msm_var.rs  rw.rs  tests.rs
src/msm_var/sliding/: assignments.rs  config.rs  instructions.rs  mod.rs  msm_var.rs  tests.rs
src/msm_var/sliding/narrow/: assignments.rs  config.rs  msm.rs  rw.rs  tests.rs
src/msm_var/sliding/wide/: assignments.rs  config.rs  msm.rs  msm_var.rs  tests.rs
