[package]
name = "halo2msm"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["circuit-params"] }
# halo2 = { package = "halo2_proofs", path = "../halo2/halo2_proofs" }
group = "0.13"
ff = "0.13"
subtle = { version = "2.3", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"

[features]
sanity-check = []
info = []
default = ["sanity-check"]